// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should transform AlpineBits model to gUFO 1`] = `
"@prefix : <https://example.com#>.
@prefix gufo: <http://purl.org/nemo/gufo#>.
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>.
@prefix owl: <http://www.w3.org/2002/07/owl#>.

<https://example.com> rdf:type owl:Ontology;
    owl:imports gufo:.
[ rdf:type owl:AllDisjointClasses ] owl:members (:a8q2ZeaGAqACBxTF :JoK2ZeaGAqACBxS5 :u7vTKRaGAqACCA1k :BUPTKRaGAqACCA1S :avP3KRaGAqACCBJV :2cXhgFaAUB20XxMA :cqgEFeaGAqACByFl :YqX4FeaGAqACByFI :Ryx7KRaGAqACCBFU :gjQq0.aGAqAovRJq).
:vQNfFRaGAqCsICRd rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Area Owner\\".
:ta4OZeaGAqACBxXY rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :kJXWZeaGAqACBxRJ;
    rdfs:label \\"organized by\\".
:rI7OZeaGAqACBxaN rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :Hqt2ZeaGAqACBxVQ;
    rdfs:label \\"sponsored by\\".
:VuRuZeaGAqACBxdN rdf:type owl:ObjectProperty;
    rdfs:domain :8pguZeaGAqACBxbW;
    rdfs:range :u0X6ZeaGAqACBxFU;
    rdfs:label \\"has sub event\\".
:eecx5eaGAqACBx2N rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :VhSB5eaGAqACBxwL;
    rdfs:label \\"contributes in\\".
:gLFx5eaGAqACBx3m rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :_RRB5eaGAqACBxxv;
    rdfs:label \\"published by\\".
:tXIEFeaGAqACByF6 rdf:type owl:ObjectProperty;
    rdfs:domain :xh2EFeaGAqACByIW;
    rdfs:range :u0X6ZeaGAqACBxFU;
    rdfs:label \\"illustrates\\".
:p9oEFeaGAqACByGN rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :cqgEFeaGAqACByFl;
    rdfs:label \\"has video\\".
:MJLUFeaGAqACByTE rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :aVPkFeaGAqACByPM.
:zVD0FeaGAqACByXj rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :3H70FeaGAqACByYE;
    rdfs:label \\"happens at\\".
:qFia0.aGAqAovRLK rdf:type owl:ObjectProperty;
    rdfs:domain :u0X6ZeaGAqACBxFU;
    rdfs:range :gjQq0.aGAqAovRJq;
    rdfs:label \\"edition of\\".
:yFk60.aGAqAovRNe rdf:type owl:ObjectProperty;
    rdfs:domain :ZI5mZeaGAqACBxLj;
    rdfs:range :vM_a0.aGAqAovRNA;
    rdfs:label \\"reachable by\\".
:TwVW0.aGAqAovRWF rdf:type owl:ObjectProperty;
    rdfs:domain :xN.W0.aGAqAovRVX;
    rdfs:range :u0X6ZeaGAqACBxFU;
    rdfs:label \\"in context of\\".
:0W9W0.aGAqAovRW. rdf:type owl:ObjectProperty;
    rdfs:domain :xN.W0.aGAqAovRVX;
    rdfs:range :3H70FeaGAqACByYE;
    rdfs:label \\"refers to\\".
:rtJ3KRaGAqACCBHq rdf:type owl:ObjectProperty;
    rdfs:domain :Ryx7KRaGAqACCBFU;
    rdfs:range :v9I7KRaGAqACCBFG.
:.LAPKRaGAqACCBJs rdf:type owl:ObjectProperty;
    rdfs:domain :BUPTKRaGAqACCA1S;
    rdfs:range :avP3KRaGAqACCBJV.
:3x40WRaGAqCsIB4W rdf:type owl:ObjectProperty;
    rdfs:domain :ND1aexaGAqCsIB1b;
    rdfs:range :avP3KRaGAqACCBJV.
:Sjm8WRaGAqCsICXT rdf:type owl:ObjectProperty;
    rdfs:domain :BUPTKRaGAqACCA1S;
    rdfs:range :ZehMWRaGAqCsIB9D.
:Bgl8WRaGAqCsICZc rdf:type owl:ObjectProperty;
    rdfs:domain :u7vTKRaGAqACCA1k;
    rdfs:range :97lcWRaGAqCsICSi.
:aOb8WRaGAqCsICap rdf:type owl:ObjectProperty;
    rdfs:domain :Ryx7KRaGAqACCBFU;
    rdfs:range :Omi8WRaGAqCsICVp.
:5ALZWRaGAqCsIDCJ rdf:type owl:ObjectProperty;
    rdfs:domain :VaUC0.aGAqAovQ3q;
    rdfs:range :5LxsNeaGAqACBzHc.
:fEChFRaGAqCsIAyp rdf:type owl:ObjectProperty;
    rdfs:domain :49fBFRaGAqCsIAol;
    rdfs:range :ZI5mZeaGAqACBxLj;
    rdfs:label \\"measured by\\".
:eTVhFRaGAqCsIA1o rdf:type owl:ObjectProperty;
    rdfs:domain :49fBFRaGAqCsIAol;
    rdfs:range :5LxsNeaGAqACBzHc;
    rdfs:label \\"measured in\\".
:4XBRFRaGAqCsIA4_ rdf:type owl:ObjectProperty;
    rdfs:domain :49fBFRaGAqCsIAol;
    rdfs:range :iT8RFRaGAqCsIA3T;
    rdfs:label \\"identifies secondary surface\\".
:oVhRFRaGAqCsIA5S rdf:type owl:ObjectProperty;
    rdfs:domain :49fBFRaGAqCsIAol;
    rdfs:range :iT8RFRaGAqCsIA3T;
    rdfs:label \\"identifies primary surface\\".
:pz.5FRaGAqCsIBNB rdf:type owl:ObjectProperty;
    rdfs:domain :2bX5lRaGAqCsICdP;
    rdfs:range :avP3KRaGAqACCBJV.
:ZDhTFRaGAqCsIB2s rdf:type owl:ObjectProperty;
    rdfs:domain :5LxsNeaGAqACBzHc;
    rdfs:range :5LxsNeaGAqACBzHc;
    rdfs:label \\"gives access to\\".
:CiSilRaGAqCsICVW rdf:type owl:ObjectProperty;
    rdfs:domain :vQNfFRaGAqCsICRd;
    rdfs:range :avP3KRaGAqACCBJV;
    rdfs:label \\"manages\\".
:kvMxgFaAUB20XxOx rdf:type owl:ObjectProperty;
    rdfs:domain :bgem.g6AUB20tyWQ;
    rdfs:range :iM5RgFaAUB20XxOU;
    rdfs:label \\"available under\\".
:bO0pgFaAUB20Xxb8 rdf:type owl:ObjectProperty;
    rdfs:domain :bgem.g6AUB20tyWQ;
    rdfs:range :9fKxgFaAUB20XxPv;
    rdfs:label \\"owned by\\".
:LnY2MFaAUB22dhkc rdf:type owl:ObjectProperty;
    rdfs:domain :xh2EFeaGAqACByIW;
    rdfs:range :yOg2MFaAUB22dhkH.
:O9KW.g6AUB20tyYO rdf:type owl:ObjectProperty;
    rdfs:domain :xh2EFeaGAqACByIW;
    rdfs:range :bgem.g6AUB20tyWQ;
    rdfs:label \\"refers to\\".
:guit.g6AUB20t0D_ rdf:type owl:ObjectProperty;
    rdfs:domain :V1RMFeaGAqACBycH;
    rdfs:range :hlJ55eaGAqACByA8.
:1cCj.g6AUB20t0ed rdf:type owl:ObjectProperty;
    rdfs:domain :v9I7KRaGAqACCBFG;
    rdfs:range :avP3KRaGAqACCBJV.
:uyoO0.aGAqAovReC rdf:type owl:ObjectProperty;
    rdfs:domain :zVD0FeaGAqACByXj;
    rdfs:range :xN.W0.aGAqAovRVX.
[ rdf:type owl:AllDisjointClasses ] owl:members (:a8q2ZeaGAqACBxTF :JoK2ZeaGAqACBxS5).
:vQNfFRaGAqCsICRd rdfs:subClassOf :ZI5mZeaGAqACBxLj.
:ZI5mZeaGAqACBxLj owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:a8q2ZeaGAqACBxTF :JoK2ZeaGAqACBxS5)
].
:vQNfFRaGAqCsICRd rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
[ rdf:type owl:AllDisjointClasses ] owl:members (:2cXhgFaAUB20XxMA :YqX4FeaGAqACByFI :cqgEFeaGAqACByFl).
:9fKxgFaAUB20XxPv rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Copyright Owner\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:w9VGZeaGAqACBxIC :YaFGZeaGAqACBxHu :LdVGZeaGAqACBxH9 :c25qFBaGAqACCBkO :yroGZeaGAqACBxGM).
:9fKxgFaAUB20XxPv rdfs:subClassOf :ZI5mZeaGAqACBxLj.
:u0X6ZeaGAqACBxFU owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:w9VGZeaGAqACBxIC :YaFGZeaGAqACBxHu :LdVGZeaGAqACBxH9 :c25qFBaGAqACCBkO :yroGZeaGAqACBxGM)
].
:9fKxgFaAUB20XxPv rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
[ rdf:type owl:AllDisjointClasses ] owl:members (:8pguZeaGAqACBxbW :rokuZeaGAqACBxbm).
:VhSB5eaGAqACBxwL rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Contributor\\".
:u0X6ZeaGAqACBxFU owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:8pguZeaGAqACBxbW :rokuZeaGAqACBxbm)
].
:VhSB5eaGAqACBxwL rdfs:subClassOf :ZI5mZeaGAqACBxLj.
[ rdf:type owl:AllDisjointClasses ] owl:members (:34xpFRaGAqCsIBFB :CkhpFRaGAqCsIBEz :nLJpFRaGAqCsIBFP).
:VhSB5eaGAqACBxwL rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
:5LxsNeaGAqACBzHc owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:34xpFRaGAqCsIBFB :CkhpFRaGAqCsIBEz :nLJpFRaGAqCsIBFP)
].
:_RRB5eaGAqACBxxv rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Publisher\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:FLZMFeaGAqACByck :eFHl.g6AUB20tznI :RQrl.g6AUB20tzm0 :Edfl.g6AUB20tznk :8r9MFeaGAqACByc6 :inpMFeaGAqACBycY).
[ rdf:type owl:AllDisjointClasses ] owl:members (:u0X6ZeaGAqACBxFU :49fBFRaGAqCsIAol :xN.W0.aGAqAovRVX :bgem.g6AUB20tyWQ).
:_RRB5eaGAqACBxxv rdfs:subClassOf :ZI5mZeaGAqACBxLj.
:V1RMFeaGAqACBycH owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:FLZMFeaGAqACByck :eFHl.g6AUB20tznI :RQrl.g6AUB20tzm0 :Edfl.g6AUB20tznk :8r9MFeaGAqACByc6 :inpMFeaGAqACBycY)
].
:_RRB5eaGAqACBxxv rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
[ rdf:type owl:AllDisjointClasses ] owl:members (:ND1aexaGAqCsIB1b :v9I7KRaGAqACCBFG).
:Hqt2ZeaGAqACBxVQ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Sponsor\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:BUPTKRaGAqACCA1S :avP3KRaGAqACCBJV :u7vTKRaGAqACCA1k).
:Hqt2ZeaGAqACBxVQ rdfs:subClassOf :ZI5mZeaGAqACBxLj.
[ rdf:type owl:AllDisjointClasses ] owl:members (:2bX5lRaGAqCsICdP :h.P5lRaGAqCsICdh).
:Hqt2ZeaGAqACBxVQ rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
:avP3KRaGAqACCBJV owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:2bX5lRaGAqCsICdP :h.P5lRaGAqCsICdh)
].
:kJXWZeaGAqACBxRJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Organizer\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:a8q2ZeaGAqACBxTF :JoK2ZeaGAqACBxS5).
:kJXWZeaGAqACBxRJ rdfs:subClassOf :ZI5mZeaGAqACBxLj.
:ZI5mZeaGAqACBxLj owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:a8q2ZeaGAqACBxTF :JoK2ZeaGAqACBxS5)
].
[ rdf:type owl:AllDisjointClasses ] owl:members (:vM_a0.aGAqAovRNA :V1RMFeaGAqACBycH).
:kJXWZeaGAqACBxRJ rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
[ rdf:type owl:AllDisjointClasses ] owl:members (:2cXhgFaAUB20XxMA :YqX4FeaGAqACByFI :cqgEFeaGAqACByFl).
:a8q2ZeaGAqACBxTF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Organization\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:w9VGZeaGAqACBxIC :YaFGZeaGAqACBxHu :LdVGZeaGAqACBxH9 :c25qFBaGAqACCBkO :yroGZeaGAqACBxGM).
:a8q2ZeaGAqACBxTF rdfs:subClassOf :ZI5mZeaGAqACBxLj.
:u0X6ZeaGAqACBxFU owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:w9VGZeaGAqACBxIC :YaFGZeaGAqACBxHu :LdVGZeaGAqACBxH9 :c25qFBaGAqACCBkO :yroGZeaGAqACBxGM)
].
:a8q2ZeaGAqACBxTF rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
[ rdf:type owl:AllDisjointClasses ] owl:members (:8pguZeaGAqACBxbW :rokuZeaGAqACBxbm).
:JoK2ZeaGAqACBxS5 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Person\\".
:u0X6ZeaGAqACBxFU owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:8pguZeaGAqACBxbW :rokuZeaGAqACBxbm)
].
:JoK2ZeaGAqACBxS5 rdfs:subClassOf :ZI5mZeaGAqACBxLj.
[ rdf:type owl:AllDisjointClasses ] owl:members (:34xpFRaGAqCsIBFB :CkhpFRaGAqCsIBEz :nLJpFRaGAqCsIBFP).
:JoK2ZeaGAqACBxS5 rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:5LxsNeaGAqACBzHc owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:34xpFRaGAqCsIBFB :CkhpFRaGAqCsIBEz :nLJpFRaGAqCsIBFP)
].
:ZI5mZeaGAqACBxLj rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Agent\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:FLZMFeaGAqACByck :eFHl.g6AUB20tznI :RQrl.g6AUB20tzm0 :Edfl.g6AUB20tznk :8r9MFeaGAqACByc6 :inpMFeaGAqACBycY).
:ZI5mZeaGAqACBxLj rdfs:subClassOf :pd7zKRaGAqACCA7s.
:V1RMFeaGAqACBycH owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:FLZMFeaGAqACByck :eFHl.g6AUB20tznI :RQrl.g6AUB20tzm0 :Edfl.g6AUB20tznk :8r9MFeaGAqACByc6 :inpMFeaGAqACBycY)
].
:ZI5mZeaGAqACBxLj rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
[ rdf:type owl:AllDisjointClasses ] owl:members (:ND1aexaGAqCsIB1b :v9I7KRaGAqACCBFG).
:5LxsNeaGAqACBzHc rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Place\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:BUPTKRaGAqACCA1S :avP3KRaGAqACCBJV :u7vTKRaGAqACCA1k).
:5LxsNeaGAqACBzHc rdfs:subClassOf :hlJ55eaGAqACByA8.
[ rdf:type owl:AllDisjointClasses ] owl:members (:2bX5lRaGAqCsICdP :h.P5lRaGAqCsICdh).
:5LxsNeaGAqACBzHc rdfs:subClassOf :pd7zKRaGAqACCA7s.
:avP3KRaGAqACCBJV owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:2bX5lRaGAqCsICdP :h.P5lRaGAqCsICdh)
].
:5LxsNeaGAqACBzHc rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
:c25qFBaGAqACCBkO rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Rescheduled\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:Phase.
:8pguZeaGAqACBxbW rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Composite Event\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:SubKind.
:rokuZeaGAqACBxbm rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Simple Event\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:SubKind.
:w9VGZeaGAqACBxIC rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Cancelled\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:Phase.
:LdVGZeaGAqACBxH9 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Realized\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:Phase.
:YaFGZeaGAqACBxHu rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Ongoing\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:Phase.
:yroGZeaGAqACBxGM rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Scheduled\\";
    rdfs:subClassOf :u0X6ZeaGAqACBxFU;
    rdf:type gufo:Phase.
:u0X6ZeaGAqACBxFU rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Event\\";
    rdfs:subClassOf :pd7zKRaGAqACCA7s, gufo:Relator;
    rdf:type gufo:Kind.
:vM_a0.aGAqAovRNA rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Contact Point\\";
    rdfs:subClassOf gufo:Quality;
    rdf:type gufo:Kind.
:pd7zKRaGAqACCA7s rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Named Entity\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
:h.P5lRaGAqCsICdh rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"SimpleArea\\";
    rdfs:subClassOf :avP3KRaGAqACCBJV;
    rdf:type gufo:SubKind.
:2bX5lRaGAqCsICdP rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Composite Area\\";
    rdfs:subClassOf :avP3KRaGAqACCBJV;
    rdf:type gufo:SubKind.
:v9I7KRaGAqACCBFG rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Snowpark\\";
    rdfs:subClassOf :u7vTKRaGAqACCA1k;
    rdf:type gufo:SubKind.
:u7vTKRaGAqACCA1k rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Trail\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:hlJ55eaGAqACByA8 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"GeoSpatialFeature\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
:nLJpFRaGAqCsIBFP rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Permanently Closed\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:Endurant;
    rdf:type gufo:PhaseMixin.
:34xpFRaGAqCsIBFB rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Closed\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:Endurant;
    rdf:type gufo:PhaseMixin.
:CkhpFRaGAqCsIBEz rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Open\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:Endurant;
    rdf:type gufo:PhaseMixin.
:BUPTKRaGAqACCA1S rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Lift\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:avP3KRaGAqACCBJV rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Mountain Area\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:3H70FeaGAqACByYE rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Venue\\";
    rdfs:subClassOf :5LxsNeaGAqACBzHc, gufo:Endurant;
    rdf:type gufo:RoleMixin.
:2cXhgFaAUB20XxMA rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Audio Object\\";
    rdfs:subClassOf :xh2EFeaGAqACByIW, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:cqgEFeaGAqACByFl rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Video Object\\";
    rdfs:subClassOf :xh2EFeaGAqACByIW, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:YqX4FeaGAqACByFI rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Image Object\\";
    rdfs:subClassOf :xh2EFeaGAqACByIW, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:xh2EFeaGAqACByIW rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Media Object\\";
    rdfs:subClassOf :pd7zKRaGAqACCA7s, gufo:Endurant;
    rdf:type gufo:Category.
:ND1aexaGAqCsIB1b rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Ski Slope\\";
    rdfs:subClassOf :u7vTKRaGAqACCA1k;
    rdf:type gufo:SubKind.
:49fBFRaGAqCsIAol rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Snow Measurement\\";
    rdfs:subClassOf :hlJ55eaGAqACByA8, gufo:Relator;
    rdf:type gufo:Kind.
:Ryx7KRaGAqACCBFU rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Snowpark Feature\\";
    rdfs:subClassOf :pd7zKRaGAqACCA7s, :hlJ55eaGAqACByA8, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:FLZMFeaGAqACByck rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Line String\\";
    rdfs:subClassOf :V1RMFeaGAqACBycH;
    rdf:type gufo:SubKind.
:inpMFeaGAqACBycY rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Polygon\\";
    rdfs:subClassOf :V1RMFeaGAqACBycH;
    rdf:type gufo:SubKind.
:8r9MFeaGAqACByc6 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Point\\";
    rdfs:subClassOf :V1RMFeaGAqACBycH;
    rdf:type gufo:SubKind.
:V1RMFeaGAqACBycH rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Geometry\\";
    rdfs:subClassOf gufo:Quality;
    rdf:type gufo:Kind.
:gjQq0.aGAqAovRJq rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Event Series\\";
    rdfs:subClassOf :pd7zKRaGAqACCA7s, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:xN.W0.aGAqAovRVX rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Venue Allocation\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:bgem.g6AUB20tyWQ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Copyright Ownership\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:RQrl.g6AUB20tzm0 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Multi-Point\\";
    rdfs:subClassOf :V1RMFeaGAqACBycH;
    rdf:type gufo:SubKind.
:eFHl.g6AUB20tznI rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Multi Line String\\";
    rdfs:subClassOf :V1RMFeaGAqACBycH;
    rdf:type gufo:SubKind.
:Edfl.g6AUB20tznk rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Multi-Polygon\\";
    rdfs:subClassOf :V1RMFeaGAqACBycH;
    rdf:type gufo:SubKind.
"
`;

exports[`should transform OntoUML <<mixin>> class 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:addoWg6D.AAAARS0> <:SgLoWg6D.AAAARTw>) .
<:yhVoWg6D.AAAARSb> <rdf:type> <owl:Class> .
<:yhVoWg6D.AAAARSb> <rdf:type> <owl:NamedIndividual> .
<:yhVoWg6D.AAAARSb> <rdfs:label> \\"Seatable\\" .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:addoWg6D.AAAARS0> <:OtjoWg6D.AAAARTV>) .
<:yhVoWg6D.AAAARSb> <rdfs:subClassOf> <gufo:Endurant> .
<:yhVoWg6D.AAAARSb> <rdf:type> <gufo:Mixin> .
<:yhVoWg6D.AAAARSb> <owl:equivalentClass> [
  <rdf:type> <owl:Class>;
  <owl:unionOf> (<:addoWg6D.AAAARS0> <:OtjoWg6D.AAAARTV>)
] .
<:addoWg6D.AAAARS0> <rdf:type> <owl:Class> .
<:addoWg6D.AAAARS0> <rdf:type> <owl:NamedIndividual> .
<:addoWg6D.AAAARS0> <rdfs:label> \\"Chair\\" .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:s5HoWg6D.AAAARUX> <:OtjoWg6D.AAAARTV>) .
<:addoWg6D.AAAARS0> <rdfs:subClassOf> <:yhVoWg6D.AAAARSb> .
<:SgLoWg6D.AAAARTw> <owl:equivalentClass> [
  <rdf:type> <owl:Class>;
  <owl:unionOf> (<:s5HoWg6D.AAAARUX> <:OtjoWg6D.AAAARTV>)
] .
<:addoWg6D.AAAARS0> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:addoWg6D.AAAARS0> <rdf:type> <gufo:Kind> .
<:OtjoWg6D.AAAARTV> <rdf:type> <owl:Class> .
<:OtjoWg6D.AAAARTV> <rdf:type> <owl:NamedIndividual> .
<:OtjoWg6D.AAAARTV> <rdfs:label> \\"Solid Crate\\" .
<:OtjoWg6D.AAAARTV> <rdfs:subClassOf> <:yhVoWg6D.AAAARSb> .
<:OtjoWg6D.AAAARTV> <rdfs:subClassOf> <:SgLoWg6D.AAAARTw> .
<:OtjoWg6D.AAAARTV> <rdf:type> <gufo:Phase> .
<:SgLoWg6D.AAAARTw> <rdf:type> <owl:Class> .
<:SgLoWg6D.AAAARTw> <rdf:type> <owl:NamedIndividual> .
<:SgLoWg6D.AAAARTw> <rdfs:label> \\"Crate\\" .
<:SgLoWg6D.AAAARTw> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:SgLoWg6D.AAAARTw> <rdf:type> <gufo:Kind> .
<:s5HoWg6D.AAAARUX> <rdf:type> <owl:Class> .
<:s5HoWg6D.AAAARUX> <rdf:type> <owl:NamedIndividual> .
<:s5HoWg6D.AAAARUX> <rdfs:label> \\"Broken Crate\\" .
<:s5HoWg6D.AAAARUX> <rdfs:subClassOf> <:SgLoWg6D.AAAARTw> .
<:s5HoWg6D.AAAARUX> <rdf:type> <gufo:Phase> .
"
`;

exports[`should transform OntoUML <<mode>> class as ExtrinsicMode 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:Q5deWA6AUB0UtAWn> <:Q5deWA6AUB0UtAWo>) .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:Class> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:NamedIndividual> .
<:qJdeWA6AUB0UtAWm> <rdfs:label> \\"Love\\" .
<:lYARBA6AUB0UtAwk> <rdf:type> <owl:ObjectProperty> .
<:lYARBA6AUB0UtAwk> <rdfs:domain> <:qJdeWA6AUB0UtAWm> .
<:lYARBA6AUB0UtAwk> <rdfs:range> <:Q5deWA6AUB0UtAWn> .
<:lYARBA6AUB0UtAwk> <rdfs:label> \\"LovePerson\\" .
<:lYARBA6AUB0UtAwk> <rdf:type> <owl:ObjectProperty> .
<:lYARBA6AUB0UtAwk> <rdfs:domain> <:qJdeWA6AUB0UtAWm> .
<:lYARBA6AUB0UtAwk> <rdfs:range> <:Q5deWA6AUB0UtAWo> .
<:lYARBA6AUB0UtAwk> <rdfs:label> \\"LoveCar\\" .
<:qJdeWA6AUB0UtAWm> <rdfs:subClassOf> <gufo:ExtrinsicMode> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <gufo:Kind> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:Class> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:NamedIndividual> .
<:Q5deWA6AUB0UtAWn> <rdfs:label> \\"Person\\" .
<:Q5deWA6AUB0UtAWn> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <gufo:Kind> .
<:Q5deWA6AUB0UtAWo> <rdf:type> <owl:Class> .
<:Q5deWA6AUB0UtAWo> <rdf:type> <owl:NamedIndividual> .
<:Q5deWA6AUB0UtAWo> <rdfs:label> \\"Car\\" .
<:Q5deWA6AUB0UtAWo> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:Q5deWA6AUB0UtAWo> <rdf:type> <gufo:Kind> .
"
`;

exports[`should transform OntoUML <<mode>> class as IntrinsicMode 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:Class> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <owl:NamedIndividual> .
<:qJdeWA6AUB0UtAWm> <rdfs:label> \\"Headache\\" .
<:lYARBA6AUB0UtAwk> <rdf:type> <owl:ObjectProperty> .
<:lYARBA6AUB0UtAwk> <rdfs:domain> <:qJdeWA6AUB0UtAWm> .
<:lYARBA6AUB0UtAwk> <rdfs:range> <:Q5deWA6AUB0UtAWn> .
<:lYARBA6AUB0UtAwk> <rdfs:label> \\"HeadachePerson\\" .
<:qJdeWA6AUB0UtAWm> <rdfs:subClassOf> <gufo:IntrinsicMode> .
<:qJdeWA6AUB0UtAWm> <rdf:type> <gufo:Kind> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:Class> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <owl:NamedIndividual> .
<:Q5deWA6AUB0UtAWn> <rdfs:label> \\"Person\\" .
<:Q5deWA6AUB0UtAWn> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:Q5deWA6AUB0UtAWn> <rdf:type> <gufo:Kind> .
"
`;

exports[`should transform OntoUML <<relator>> class 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
<:IsW5mg6D.AAAAQqE> <rdf:type> <owl:Class> .
<:IsW5mg6D.AAAAQqE> <rdf:type> <owl:NamedIndividual> .
<:IsW5mg6D.AAAAQqE> <rdfs:label> \\"Person\\" .
<:di3Fmg6D.AAAAQud> <rdf:type> <owl:ObjectProperty> .
<:di3Fmg6D.AAAAQud> <rdfs:domain> <:z.T5mg6D.AAAAQsY> .
<:di3Fmg6D.AAAAQud> <rdfs:range> <:SzOFmg6D.AAAAQuF> .
<:gWAlmg6D.AAAAQu9> <rdf:type> <owl:ObjectProperty> .
<:gWAlmg6D.AAAAQu9> <rdfs:domain> <:SzOFmg6D.AAAAQuF> .
<:gWAlmg6D.AAAAQu9> <rdfs:range> <:yPX5mg6D.AAAAQtn> .
<:7k4lmg6D.AAAAQvd> <rdf:type> <owl:ObjectProperty> .
<:7k4lmg6D.AAAAQvd> <rdfs:domain> <:z.T5mg6D.AAAAQsY> .
<:7k4lmg6D.AAAAQvd> <rdfs:range> <:yPX5mg6D.AAAAQtn> .
<:7k4lmg6D.AAAAQvd> <rdfs:label> \\"HusbandWife\\" .
<:gk0lmg6D.AAAAQv1> <rdf:type> <owl:ObjectProperty> .
<:gk0lmg6D.AAAAQv1> <rdfs:domain> <:7k4lmg6D.AAAAQvd> .
<:gk0lmg6D.AAAAQv1> <rdfs:range> <:SzOFmg6D.AAAAQuF> .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:ech5mg6D.AAAAQqj> <:jiZ5mg6D.AAAAQrK>) .
<:IsW5mg6D.AAAAQqE> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:IsW5mg6D.AAAAQqE> <rdf:type> <gufo:Kind> .
<:IsW5mg6D.AAAAQqE> <owl:equivalentClass> [
  <rdf:type> <owl:Class>;
  <owl:unionOf> (<:ech5mg6D.AAAAQqj> <:jiZ5mg6D.AAAAQrK>)
] .
<:ech5mg6D.AAAAQqj> <rdf:type> <owl:Class> .
<:ech5mg6D.AAAAQqj> <rdf:type> <owl:NamedIndividual> .
<:ech5mg6D.AAAAQqj> <rdfs:label> \\"Man\\" .
<:ech5mg6D.AAAAQqj> <rdfs:subClassOf> <:IsW5mg6D.AAAAQqE> .
<:ech5mg6D.AAAAQqj> <rdf:type> <gufo:SubKind> .
<:jiZ5mg6D.AAAAQrK> <rdf:type> <owl:Class> .
<:jiZ5mg6D.AAAAQrK> <rdf:type> <owl:NamedIndividual> .
<:jiZ5mg6D.AAAAQrK> <rdfs:label> \\"Woman\\" .
<:jiZ5mg6D.AAAAQrK> <rdfs:subClassOf> <:IsW5mg6D.AAAAQqE> .
<:jiZ5mg6D.AAAAQrK> <rdf:type> <gufo:SubKind> .
<:z.T5mg6D.AAAAQsY> <rdf:type> <owl:Class> .
<:z.T5mg6D.AAAAQsY> <rdf:type> <owl:NamedIndividual> .
<:z.T5mg6D.AAAAQsY> <rdfs:label> \\"Husband\\" .
<:z.T5mg6D.AAAAQsY> <rdfs:subClassOf> <:ech5mg6D.AAAAQqj> .
<:z.T5mg6D.AAAAQsY> <rdf:type> <gufo:Role> .
<:yPX5mg6D.AAAAQtn> <rdf:type> <owl:Class> .
<:yPX5mg6D.AAAAQtn> <rdf:type> <owl:NamedIndividual> .
<:yPX5mg6D.AAAAQtn> <rdfs:label> \\"Wife\\" .
<:yPX5mg6D.AAAAQtn> <rdfs:subClassOf> <:jiZ5mg6D.AAAAQrK> .
<:yPX5mg6D.AAAAQtn> <rdf:type> <gufo:Role> .
<:SzOFmg6D.AAAAQuF> <rdf:type> <owl:Class> .
<:SzOFmg6D.AAAAQuF> <rdf:type> <owl:NamedIndividual> .
<:SzOFmg6D.AAAAQuF> <rdfs:label> \\"Marriage\\" .
<:SzOFmg6D.AAAAQuF> <rdfs:subClassOf> <gufo:Relator> .
<:SzOFmg6D.AAAAQuF> <rdf:type> <gufo:Kind> .
"
`;

exports[`should transform OntoUML <<role>> class 1`] = `
"<https://example.com> <rdf:type> <owl:Ontology> .
<https://example.com> <owl:imports> <gufo:> .
<:IsW5mg6D.AAAAQqE> <rdf:type> <owl:Class> .
<:IsW5mg6D.AAAAQqE> <rdf:type> <owl:NamedIndividual> .
<:IsW5mg6D.AAAAQqE> <rdfs:label> \\"Person\\" .
[ <rdf:type> <owl:AllDisjointClasses> ] <owl:members> (<:ech5mg6D.AAAAQqj> <:jiZ5mg6D.AAAAQrK>) .
<:IsW5mg6D.AAAAQqE> <rdfs:subClassOf> <gufo:FunctionalComplex> .
<:IsW5mg6D.AAAAQqE> <rdf:type> <gufo:Kind> .
<:IsW5mg6D.AAAAQqE> <owl:equivalentClass> [
  <rdf:type> <owl:Class>;
  <owl:unionOf> (<:ech5mg6D.AAAAQqj> <:jiZ5mg6D.AAAAQrK>)
] .
<:ech5mg6D.AAAAQqj> <rdf:type> <owl:Class> .
<:ech5mg6D.AAAAQqj> <rdf:type> <owl:NamedIndividual> .
<:ech5mg6D.AAAAQqj> <rdfs:label> \\"Man\\" .
<:ech5mg6D.AAAAQqj> <rdfs:subClassOf> <:IsW5mg6D.AAAAQqE> .
<:ech5mg6D.AAAAQqj> <rdf:type> <gufo:SubKind> .
<:jiZ5mg6D.AAAAQrK> <rdf:type> <owl:Class> .
<:jiZ5mg6D.AAAAQrK> <rdf:type> <owl:NamedIndividual> .
<:jiZ5mg6D.AAAAQrK> <rdfs:label> \\"Woman\\" .
<:jiZ5mg6D.AAAAQrK> <rdfs:subClassOf> <:IsW5mg6D.AAAAQqE> .
<:jiZ5mg6D.AAAAQrK> <rdf:type> <gufo:SubKind> .
<:z.T5mg6D.AAAAQsY> <rdf:type> <owl:Class> .
<:z.T5mg6D.AAAAQsY> <rdf:type> <owl:NamedIndividual> .
<:z.T5mg6D.AAAAQsY> <rdfs:label> \\"Husband\\" .
<:z.T5mg6D.AAAAQsY> <rdfs:subClassOf> <:ech5mg6D.AAAAQqj> .
<:z.T5mg6D.AAAAQsY> <rdf:type> <gufo:Role> .
<:yPX5mg6D.AAAAQtn> <rdf:type> <owl:Class> .
<:yPX5mg6D.AAAAQtn> <rdf:type> <owl:NamedIndividual> .
<:yPX5mg6D.AAAAQtn> <rdfs:label> \\"Wife\\" .
<:yPX5mg6D.AAAAQtn> <rdfs:subClassOf> <:jiZ5mg6D.AAAAQrK> .
<:yPX5mg6D.AAAAQtn> <rdf:type> <gufo:Role> .
"
`;

exports[`should transform OntoUML generic model to gUFO 1`] = `
"@prefix : <https://example.com#>.
@prefix gufo: <http://purl.org/nemo/gufo#>.
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>.
@prefix owl: <http://www.w3.org/2002/07/owl#>.

<https://example.com> rdf:type owl:Ontology;
    owl:imports gufo:.
[ rdf:type owl:AllDisjointClasses ] owl:members (:2uxhBA6AUB0UtArb :j5phBA6AUB0UtAts).
:rw.hBA6AUB0UtArB rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Agent\\".
:lYARBA6AUB0UtAwk rdf:type owl:ObjectProperty;
    rdfs:domain :JLnhBA6AUB0UtAwO;
    rdfs:range :_xThBA6AUB0UtAvg.
:a0IRBA6AUB0UtAw6 rdf:type owl:ObjectProperty;
    rdfs:domain :JLnhBA6AUB0UtAwO;
    rdfs:range :GDbhBA6AUB0UtAv1.
:tGcRBA6AUB0UtAxi rdf:type owl:ObjectProperty;
    rdfs:domain :wukRBA6AUB0UtAxW;
    rdfs:range :JLnhBA6AUB0UtAwO.
:UoDdhA6GAqACnA03 rdf:type owl:ObjectProperty;
    rdfs:domain :6XxdhA6GAqACnA0J;
    rdfs:range :_xThBA6AUB0UtAvg.
:6iJ9hA6GAqACnA2s rdf:type owl:ObjectProperty;
    rdfs:domain :h_Y9hA6GAqACnA1t;
    rdfs:range :JLnhBA6AUB0UtAwO.
:dnp9hA6GAqACnA27 rdf:type owl:ObjectProperty;
    rdfs:domain :cea9hA6GAqACnA2B;
    rdfs:range :JLnhBA6AUB0UtAwO.
:iDpDhA6GAqACnA41 rdf:type owl:ObjectProperty;
    rdfs:domain :GDbhBA6AUB0UtAv1;
    rdfs:range :_xThBA6AUB0UtAvg;
    rdfs:label \\"studies-at\\".
:XE.NJA6GAqACnA7T rdf:type owl:ObjectProperty;
    rdfs:domain :rw.hBA6AUB0UtArB;
    rdfs:range :zxmNJA6GAqACnA7H.
:jNSVZA6GAqACnA.t rdf:type owl:ObjectProperty;
    rdfs:domain :iDpDhA6GAqACnA41;
    rdfs:range :JLnhBA6AUB0UtAwO.
[ rdf:type owl:AllDisjointClasses ] owl:members (:j5phBA6AUB0UtAts :2uxhBA6AUB0UtArb).
:rw.hBA6AUB0UtArB rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category;
    owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:j5phBA6AUB0UtAts :2uxhBA6AUB0UtArb)
].
:2uxhBA6AUB0UtArb rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Person\\";
    rdfs:subClassOf :rw.hBA6AUB0UtArB, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:j5phBA6AUB0UtAts rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Organization\\";
    rdfs:subClassOf :rw.hBA6AUB0UtArB, gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:_xThBA6AUB0UtAvg rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"School\\";
    rdfs:subClassOf :j5phBA6AUB0UtAts;
    rdf:type gufo:SubKind.
:GDbhBA6AUB0UtAv1 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Student\\";
    rdfs:subClassOf :2uxhBA6AUB0UtArb;
    rdf:type gufo:Role.
:JLnhBA6AUB0UtAwO rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Enrollment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:wukRBA6AUB0UtAxW rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Enrollment Date\\";
    rdfs:subClassOf gufo:Quality;
    rdf:type gufo:Kind.
:h_Y9hA6GAqACnA1t rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Sophomore\\";
    rdfs:subClassOf :GDbhBA6AUB0UtAv1;
    rdf:type gufo:Role.
:cea9hA6GAqACnA2B rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Privately Enrolled\\";
    rdfs:subClassOf :GDbhBA6AUB0UtAv1;
    rdf:type gufo:Role.
:6XxdhA6GAqACnA0J rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Department\\";
    rdfs:subClassOf :j5phBA6AUB0UtAts;
    rdf:type gufo:SubKind.
"
`;

exports[`should transform iStandard model to gUFO 1`] = `
"@prefix : <https://example.com#>.
@prefix gufo: <http://purl.org/nemo/gufo#>.
@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>.
@prefix owl: <http://www.w3.org/2002/07/owl#>.

<https://example.com> rdf:type owl:Ontology;
    owl:imports gufo:.
[ rdf:type owl:AllDisjointClasses ] owl:members (:QFOaFHaGAqAe8A_X :Pg.JFHaGAqAe8BSn :rNNOVnaGAqAeDi9t :J3_W1naGAqAeDkBF :ZlkGDnaGAqAeDkas).
:VvxaFHaGAqAe8BAf rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Agent\\".
:INrRFHaGAqAe8BNu rdf:type owl:ObjectProperty;
    rdfs:domain :D51aFHaGAqAe8BBd;
    rdfs:range :SM4RFHaGAqAe8BJD;
    rdfs:label \\"made by\\".
:wWbRFHaGAqAe8BOB rdf:type owl:ObjectProperty;
    rdfs:domain :D51aFHaGAqAe8BBd;
    rdfs:range :tURRFHaGAqAe8BLb;
    rdfs:label \\"benefits\\".
:wO0TFHaGAqAe8BdX rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :KqqJFHaGAqAe8BR_;
    rdfs:label \\"held by\\".
:1i3P1HaGAqAe8BvC rdf:type owl:ObjectProperty;
    rdfs:domain :haqP1HaGAqAe8Bt7;
    rdfs:range :vcU_1HaGAqAe8Bzz.
:WbFUNHaGAqAe8B_7 rdf:type owl:ObjectProperty;
    rdfs:domain :tp7kNHaGAqAe8B_i;
    rdfs:range :VvxaFHaGAqAe8BAf.
:4x_kzHaGAqAe8Clg rdf:type owl:ObjectProperty;
    rdfs:domain :QKFAZnaGAqAe8DZp;
    rdfs:range :1so2FHaGAqAe8BBx;
    rdfs:label \\"creates\\".
:01eUzHaGAqAe8CpV rdf:type owl:ObjectProperty;
    rdfs:domain :OAOUzHaGAqAe8Co8;
    rdfs:range :VvxaFHaGAqAe8BAf.
:BLt0zHaGAqAe8CvG rdf:type owl:ObjectProperty;
    rdfs:domain :GyZ0zHaGAqAe8CuO;
    rdfs:range :1Le_1HaGAqAe8B1c.
:LHqMzHaGAqAe8CzD rdf:type owl:ObjectProperty;
    rdfs:domain :GyZ0zHaGAqAe8CuO;
    rdfs:range :C5QMzHaGAqAe8Cwk.
:01v8zHaGAqAe8C75 rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :qI68zHaGAqAe8C7i;
    rdfs:label \\"has primary basis\\".
:LK_8zHaGAqAe8C8S rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :qI68zHaGAqAe8C7i;
    rdfs:label \\"has secondary basis\\".
:yTA7pnaGAqAe8DFb rdf:type owl:ObjectProperty;
    rdfs:domain :pZHbpnaGAqAe8DEo;
    rdfs:range :D51aFHaGAqAe8BBd;
    rdfs:label \\"regards\\".
:HAwPpnaGAqAe8DMJ rdf:type owl:ObjectProperty;
    rdfs:domain :pZHbpnaGAqAe8DEo;
    rdfs:range :qk33pnaGAqAe8DLl;
    rdfs:label \\"made by\\".
:a_XkZnaGAqAeDhA8 rdf:type owl:ObjectProperty;
    rdfs:domain :8xNw43aAUBAysYls;
    rdfs:range :2g1kZnaGAqAeDg_y.
:QnSCZnaGAqAeDhCc rdf:type owl:ObjectProperty;
    rdfs:domain :31ekZnaGAqAeDg.4;
    rdfs:range :QFOaFHaGAqAe8A_X.
:bOHWZnaGAqAeDhPD rdf:type owl:ObjectProperty;
    rdfs:domain :26zWZnaGAqAeDhOs;
    rdfs:range :tp7kNHaGAqAe8B_i.
:Cwg.ZnaGAqAeDhWM rdf:type owl:ObjectProperty;
    rdfs:domain :OAOUzHaGAqAe8Co8;
    rdfs:range :QL5uZnaGAqAeDhUD.
:8F13lnaGAqAeDh9D rdf:type owl:ObjectProperty;
    rdfs:domain :ZzJ3lnaGAqAeDh8k;
    rdfs:range :h6rr1HaGAqAe8Bkn.
:nvfvlnaGAqAeDiFM rdf:type owl:ObjectProperty;
    rdfs:domain :QFOaFHaGAqAe8A_X;
    rdfs:range :90pflnaGAqAeDiHe;
    rdfs:label \\"has legal parent\\".
:lu9_lnaGAqAeDiMT rdf:type owl:ObjectProperty;
    rdfs:domain :h6rr1HaGAqAe8Bkn;
    rdfs:range :h6rr1HaGAqAe8Bkn;
    rdfs:label \\"marriedTo\\".
:ddQAVnaGAqAeDiNM rdf:type owl:ObjectProperty;
    rdfs:domain :aeMb1HaGAqAe8Bl0;
    rdfs:range :aeMb1HaGAqAe8Bl0;
    rdfs:label \\"partnerOf\\".
:rXdgVnaGAqAeDiSQ rdf:type owl:ObjectProperty;
    rdfs:domain :1Le_1HaGAqAe8B1c;
    rdfs:range :C5QMzHaGAqAe8Cwk;
    rdfs:label \\"lives in\\".
:QPfkVnaGAqAeDipd rdf:type owl:ObjectProperty;
    rdfs:domain :jlAkVnaGAqAeDikV;
    rdfs:range :QFOaFHaGAqAe8A_X.
:ehQUVnaGAqAeDip5 rdf:type owl:ObjectProperty;
    rdfs:domain :jlAkVnaGAqAeDikV;
    rdfs:range :1l.ANHaGAqAe8B4A.
:t4kUVnaGAqAeDiq5 rdf:type owl:ObjectProperty;
    rdfs:domain :1l.ANHaGAqAe8B4A;
    rdfs:range :QFOaFHaGAqAe8A_X;
    rdfs:label \\"providesBasicCareFor\\".
:m6pOVnaGAqAeDi8s rdf:type owl:ObjectProperty;
    rdfs:domain :dheOVnaGAqAeDi7x;
    rdfs:range :QFOaFHaGAqAe8A_X.
:n09OVnaGAqAeDi.C rdf:type owl:ObjectProperty;
    rdfs:domain :dheOVnaGAqAeDi7x;
    rdfs:range :rNNOVnaGAqAeDi9t.
:PpknVnaGAqAeDjVN rdf:type owl:ObjectProperty;
    rdfs:domain :QFOaFHaGAqAe8A_X;
    rdfs:range :aHpZVnaGAqAeDjOM.
:rD5w1naGAqAeDjpo rdf:type owl:ObjectProperty;
    rdfs:domain :qY0g1naGAqAeDjao;
    rdfs:range :4pGxyXaFYFAUAgx_.
:1Rlw1naGAqAeDjqF rdf:type owl:ObjectProperty;
    rdfs:domain :qY0g1naGAqAeDjao;
    rdfs:range :QFOaFHaGAqAe8A_X.
:vHfE1naGAqAeDj37 rdf:type owl:ObjectProperty;
    rdfs:domain :kxtsDnaGAqAeDkQY;
    rdfs:range :qI68zHaGAqAe8C7i.
:N61s1naGAqAeDj_H rdf:type owl:ObjectProperty;
    rdfs:domain :qY0g1naGAqAeDjao;
    rdfs:range :kxtsDnaGAqAeDkQY.
:nEZO1naGAqAeDkFM rdf:type owl:ObjectProperty;
    rdfs:domain :Oaq21naGAqAeDkC0;
    rdfs:range :J3_W1naGAqAeDkBF.
:SelO1naGAqAeDkF0 rdf:type owl:ObjectProperty;
    rdfs:domain :kxtsDnaGAqAeDkQY;
    rdfs:range :Oaq21naGAqAeDkC0.
:5T18DnaGAqAeDkSs rdf:type owl:ObjectProperty;
    rdfs:domain :vcOsDnaGAqAeDkPr;
    rdfs:range :zZksDnaGAqAeDkOI.
:j1T8DnaGAqAeDkTM rdf:type owl:ObjectProperty;
    rdfs:domain :qY0g1naGAqAeDjao;
    rdfs:range :vcOsDnaGAqAeDkPr.
:rGPSDnaGAqAeDkWj rdf:type owl:ObjectProperty;
    rdfs:domain :kxtsDnaGAqAeDkQY;
    rdfs:range :0WXM1naGAqAeDj8s.
:Trt6DnaGAqAeDkZ3 rdf:type owl:ObjectProperty;
    rdfs:domain :vcOsDnaGAqAeDkPr;
    rdfs:range :.s56DnaGAqAeDkZi.
:a6sGDnaGAqAeDka7 rdf:type owl:ObjectProperty;
    rdfs:domain :.s56DnaGAqAeDkZi;
    rdfs:range :ZlkGDnaGAqAeDkas.
:yjfJiXaD.AAAAQ6q rdf:type owl:ObjectProperty;
    rdfs:domain :gbaJFHaGAqAe8BSL;
    rdfs:range :2sHJiXaD.AAAAQ6I.
:A4PpiXaD.AAAAQ.Q rdf:type owl:ObjectProperty;
    rdfs:domain :6c.piXaD.AAAAQ8z;
    rdfs:range :gbaJFHaGAqAe8BSL.
:ZvvpiXaD.AAAAQ.n rdf:type owl:ObjectProperty;
    rdfs:domain :6c.piXaD.AAAAQ8z;
    rdfs:range :gOSY03aFYFAUAlkF.
:g23ViXaD.AAAARQx rdf:type owl:ObjectProperty;
    rdfs:domain :D51aFHaGAqAe8BBd;
    rdfs:range :PfrZFHaGAqAe8BU.;
    rdfs:label \\"made to\\".
:66e1iXaD.AAAART5 rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :qY0g1naGAqAeDjao;
    rdfs:label \\"motivated by\\".
:X7MNiXaD.AAAARV2 rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :gbaJFHaGAqAe8BSL;
    rdfs:label \\"in the responsibility of\\".
:OEmtiXaD.AAAARar rdf:type owl:ObjectProperty;
    rdfs:domain :5qfNiXaD.AAAARX9;
    rdfs:range :gOSY03aFYFAUAlkF;
    rdfs:label \\"made to\\".
:cl.tiXaD.AAAARb2 rdf:type owl:ObjectProperty;
    rdfs:domain :5qfNiXaD.AAAARX9;
    rdfs:range :1so2FHaGAqAe8BBx;
    rdfs:label \\"conforms to\\".
:FvtTiXaD.AAAARl. rdf:type owl:ObjectProperty;
    rdfs:domain :KjzjiXaD.AAAARkQ;
    rdfs:range :5qfNiXaD.AAAARX9;
    rdfs:label \\"conforms to\\".
:0Knw43aAUBAysYmN rdf:type owl:ObjectProperty;
    rdfs:domain :8xNw43aAUBAysYls;
    rdfs:range :IS3MyXaD.AAAAR10.
:W.Uo43aAUBAysYrd rdf:type owl:ObjectProperty;
    rdfs:domain :8xNw43aAUBAysYls;
    rdfs:range :qihkZnaGAqAeDg_M.
:glLY43aAUBAysY7X rdf:type owl:ObjectProperty;
    rdfs:domain :o0TY43aAUBAysY7G;
    rdfs:range :XAMY43aAUBAysY5T.
:mYV443aAUBAysY9q rdf:type owl:ObjectProperty;
    rdfs:domain :o0TY43aAUBAysY7G;
    rdfs:range :QFOaFHaGAqAe8A_X.
:mjJU43aAUBAysZCw rdf:type owl:ObjectProperty;
    rdfs:domain :o0TY43aAUBAysY7G;
    rdfs:range :e5.U43aAUBAysZCY.
:3BIs43aAUBAysZdq rdf:type owl:ObjectProperty;
    rdfs:domain :31ekZnaGAqAeDg.4;
    rdfs:range :o0TY43aAUBAysY7G.
:M.Ps43aAUBAysZhe rdf:type owl:ObjectProperty;
    rdfs:domain :d2.s43aAUBAysZgF;
    rdfs:range :31ekZnaGAqAeDg.4.
:mIsi43aAUBAyscB_ rdf:type owl:ObjectProperty;
    rdfs:domain :hcki43aAUBAyscBo;
    rdfs:range :tSM0yXaD.AAAARwK;
    rdfs:label \\"refers to\\".
:nrTi43aAUBAyscVL rdf:type owl:ObjectProperty;
    rdfs:domain :hcki43aAUBAyscBo;
    rdfs:range :4VC5iXaD.AAAARBd;
    rdfs:label \\"created by\\".
:oG0S43aAUBAyscXe rdf:type owl:ObjectProperty;
    rdfs:domain :tSM0yXaD.AAAARwK;
    rdfs:range :4VC5iXaD.AAAARBd;
    rdfs:label \\"declared eligible by\\".
:94fk03aFYFAUAnTG rdf:type owl:ObjectProperty;
    rdfs:domain :5qfNiXaD.AAAARX9;
    rdfs:range :gbaJFHaGAqAe8BSL;
    rdfs:label \\"made by\\".
:H4js03aFYFAUAnW0 rdf:type owl:ObjectProperty;
    rdfs:domain :aKJs03aFYFAUAnVm;
    rdfs:range :7qZs03aFYFAUAnV0.
:H2zs03aFYFAUAnXJ rdf:type owl:ObjectProperty;
    rdfs:domain :5qfNiXaD.AAAARX9;
    rdfs:range :tWtq4_aFYEGQWxkJ;
    rdfs:label \\"allocates\\".
:iopS03aFYFAUAqvX rdf:type owl:ObjectProperty;
    rdfs:domain :5qfNiXaD.AAAARX9;
    rdfs:range :6URS03aFYFAUAqvB;
    rdfs:label \\"benefits\\".
:XgLS03aFYFAUArJ9 rdf:type owl:ObjectProperty;
    rdfs:domain :4KRG.faAUB1IcWbq;
    rdfs:range :qI68zHaGAqAe8C7i.
:8li603aFYFAUAtV1 rdf:type owl:ObjectProperty;
    rdfs:domain :rdna03aFYFAUAtTV;
    rdfs:range :prHa03aFYFAUAtTD;
    rdfs:label \\"temporary replaces\\".
:0Xy603aFYFAUAtWO rdf:type owl:ObjectProperty;
    rdfs:domain :ztXa03aFYFAUAtTn;
    rdfs:range :prHa03aFYFAUAtTD.
:gvb4APaAUAACnkCU rdf:type owl:ObjectProperty;
    rdfs:domain :KjzjiXaD.AAAARkQ;
    rdfs:range :KqqJFHaGAqAe8BR_;
    rdfs:label \\"benefits\\".
:679EAPaAUAACnkFU rdf:type owl:ObjectProperty;
    rdfs:domain :gOSY03aFYFAUAlkF;
    rdfs:range :KjzjiXaD.AAAARkQ;
    rdfs:label \\"delivered by\\".
:BH_E8PaAUAACnkK_ rdf:type owl:ObjectProperty;
    rdfs:domain :W06a4_aFYEGQWxre;
    rdfs:range :KjzjiXaD.AAAARkQ;
    rdfs:label \\"delivered ZZP\\".
:0rSPuPaAUAACnkg_ rdf:type owl:ObjectProperty;
    rdfs:domain :NK8LuPaAUAACnkbx;
    rdfs:range :UxjZsPaAUAACnkHy.
:RXGPuPaAUAACnkhU rdf:type owl:ObjectProperty;
    rdfs:domain :bseLQ_aFYEGUXyzA;
    rdfs:range :NK8LuPaAUAACnkbx.
:bhayi3aFYEGUEy4D rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :rtZAq3aFYEGUExSq.
:u6G6i3aFYEGUEy.z rdf:type owl:ObjectProperty;
    rdfs:domain :VzzAq3aFYEGUExTN;
    rdfs:range :5qfNiXaD.AAAARX9.
:e1lQq3aFYEGUExaV rdf:type owl:ObjectProperty;
    rdfs:domain :rtZAq3aFYEGUExSq;
    rdfs:range :VzzAq3aFYEGUExTN;
    rdfs:label \\"Part of\\".
:RxpMq3aFYEGUExoo rdf:type owl:ObjectProperty;
    rdfs:domain :d3hQ03aFYFAUAkBR;
    rdfs:range :_Wd0q3aFYEGUExnz.
:QOxaq3aFYEGUEx7j rdf:type owl:ObjectProperty;
    rdfs:domain :EqKaq3aFYEGUEx64;
    rdfs:range :5qfNiXaD.AAAARX9.
:5yp5q3aFYEGUEyCK rdf:type owl:ObjectProperty;
    rdfs:domain :5qfNiXaD.AAAARX9;
    rdfs:range :gOSY03aFYFAUAlkF;
    rdfs:label \\"abc\\".
:mLQMr3aFYEGUExxs rdf:type owl:ObjectProperty;
    rdfs:domain :3kN0r3aFYEGUExxc;
    rdfs:range :KqqJFHaGAqAe8BR_.
:EZoMr3aFYEGUExx6 rdf:type owl:ObjectProperty;
    rdfs:domain :3kN0r3aFYEGUExxc;
    rdfs:range :gbaJFHaGAqAe8BSL.
:PBzKr3aFYEGUEx0V rdf:type owl:ObjectProperty;
    rdfs:domain :VvxaFHaGAqAe8BAf;
    rdfs:range :8XCKr3aFYEGUExzu;
    rdfs:label \\"creates\\".
:U7rar3aFYEGUEx8T rdf:type owl:ObjectProperty;
    rdfs:domain :QFOaFHaGAqAe8A_X;
    rdfs:range :8XCKr3aFYEGUExzu;
    rdfs:label \\"is subject of\\".
:oBfeePaAUAACnmAV rdf:type owl:ObjectProperty;
    rdfs:domain :oBjeePaAUAACnl_h;
    rdfs:range :KqqJFHaGAqAe8BR_.
:ZIg.ePaAUAACnmAu rdf:type owl:ObjectProperty;
    rdfs:domain :oBjeePaAUAACnl_h;
    rdfs:range :C5QMzHaGAqAe8Cwk.
:tVnc_vaFYFAUAh6J rdf:type owl:ObjectProperty;
    rdfs:domain :F9Kc_vaFYFAUAh5I;
    rdfs:range :FgM8_vaFYFAUAh64;
    rdfs:label \\"represents\\".
:Bb3c_vaFYFAUAh6c rdf:type owl:ObjectProperty;
    rdfs:domain :F9Kc_vaFYFAUAh5I;
    rdfs:range :zrCs_vaFYFAUAhzW;
    rdfs:label \\"assignes\\".
:TxBi_vaFYFAUAiiV rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :ppMS_vaFYFAUAikI;
    rdfs:label \\"contains\\".
:yJiS_vaFYFAUAikn rdf:type owl:ObjectProperty;
    rdfs:domain :ppMS_vaFYFAUAikI;
    rdfs:range :jVSQzHaGAqAe8CBF;
    rdfs:label \\"assignes\\".
:ufOa_vaFYFAUAi.r rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :UFMa_vaFYFAUAi9H;
    rdfs:label \\"replaces\\".
:FE52UfaFYEGUHCsd rdf:type owl:ObjectProperty;
    rdfs:domain :gbaJFHaGAqAe8BSL;
    rdfs:range :7AQ2UfaFYEGUHCrU.
:oIk5UfaFYEGUHFiY rdf:type owl:ObjectProperty;
    rdfs:domain :2sHJiXaD.AAAAQ6I;
    rdfs:range :ru_pUfaFYEGUHFbJ.
:4XRlUfaFYEGUHFmg rdf:type owl:ObjectProperty;
    rdfs:domain :CJxFUfaFYEGUHFkc;
    rdfs:range :ru_pUfaFYEGUHFbJ;
    rdfs:label \\"lives in\\".
:Er6dUfaFYEGUHGpT rdf:type owl:ObjectProperty;
    rdfs:domain :CJxFUfaFYEGUHFkc;
    rdfs:range :CzCdUfaFYEGUHGn9.
:nOBdUfaFYEGUHGqy rdf:type owl:ObjectProperty;
    rdfs:domain :KqqJFHaGAqAe8BR_;
    rdfs:range :CzCdUfaFYEGUHGn9.
:XAETUfaFYEGUHH9e rdf:type owl:ObjectProperty;
    rdfs:domain :CzCdUfaFYEGUHGn9;
    rdfs:range :gbaJFHaGAqAe8BSL.
:WwxQ2faFYEGQT6kl rdf:type owl:ObjectProperty;
    rdfs:domain :tSM0yXaD.AAAARwK;
    rdfs:range :uO0Q2faFYEGQT6aq;
    rdfs:label \\"prefers\\".
:Wo_Q2faFYEGQT6nC rdf:type owl:ObjectProperty;
    rdfs:domain :uO0Q2faFYEGQT6aq;
    rdfs:range :Harg2faFYEGQT6aD.
:h_HI2faFYEGQT6sD rdf:type owl:ObjectProperty;
    rdfs:domain :uO0Q2faFYEGQT6aq;
    rdfs:range :1O7w2faFYEGQT6oD.
:SjvI2faFYEGQT6se rdf:type owl:ObjectProperty;
    rdfs:domain :uO0Q2faFYEGQT6aq;
    rdfs:range :5dZI2faFYEGQT6ry.
:7mR.2faFYEGQT7im rdf:type owl:ObjectProperty;
    rdfs:domain :KqqJFHaGAqAe8BR_;
    rdfs:range :f4Sg1naGAqAeDja_.
:YJV.2faFYEGQT7kF rdf:type owl:ObjectProperty;
    rdfs:domain :2sHJiXaD.AAAAQ6I;
    rdfs:range :f4Sg1naGAqAeDja_.
:cQ52.faAUB1IcW94 rdf:type owl:ObjectProperty;
    rdfs:domain :qY0g1naGAqAeDjao;
    rdfs:range :4KRG.faAUB1IcWbq;
    rdfs:label \\"classifies patient in\\".
:Dlz2.faAUB1IcW_1 rdf:type owl:ObjectProperty;
    rdfs:domain :.6OZw_aFYEGUX0au;
    rdfs:range :4KRG.faAUB1IcWbq.
:ePYO.faAUB1IcXDj rdf:type owl:ObjectProperty;
    rdfs:domain :D51aFHaGAqAe8BBd;
    rdfs:range :7qZs03aFYFAUAnV0;
    rdfs:label \\"requests\\".
:H2qO.faAUB1IcXRc rdf:type owl:ObjectProperty;
    rdfs:domain :uO0Q2faFYEGQT6aq;
    rdfs:range :KjzjiXaD.AAAARkQ.
:ocve.faAUB1IcX2p rdf:type owl:ObjectProperty;
    rdfs:domain :XXne.faAUB1IcX10;
    rdfs:range :AgZE2faFYEGQT610.
:vgCl.faAUB1IcaCK rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :aKJs03aFYFAUAnVm;
    rdfs:label \\"consists of\\".
:ZRpZw_aFYEGUX0bF rdf:type owl:ObjectProperty;
    rdfs:domain :rj95w_aFYEGUX0iF;
    rdfs:range :.6OZw_aFYEGUX0au.
:RUTV4_aFYEGQWx4F rdf:type owl:ObjectProperty;
    rdfs:domain :4KRG.faAUB1IcWbq;
    rdfs:range :tSM0yXaD.AAAARwK.
:cSbF5_aGAqACCHSO rdf:type owl:ObjectProperty;
    rdfs:domain :1so2FHaGAqAe8BBx;
    rdfs:range :PfrZFHaGAqAe8BU.;
    rdfs:label \\"granted by\\".
:5l3Eb_aFYFAUBgbf rdf:type owl:ObjectProperty;
    rdfs:domain :ppMS_vaFYFAUAikI;
    rdfs:range :tSM0yXaD.AAAARwK;
    rdfs:label \\"represents\\".
:cezG9A6AUB1UpDJE rdf:type owl:ObjectProperty;
    rdfs:domain :s2DG9A6AUB1UpDEU;
    rdfs:range :QFOaFHaGAqAe8A_X.
:tN0W9A6AUB1UpDO1 rdf:type owl:ObjectProperty;
    rdfs:domain :s2DG9A6AUB1UpDEU;
    rdfs:range :6nHG9A6AUB1UpDKB;
    rdfs:label \\"full format\\".
:BHi29A6AUB1UpDl0 rdf:type owl:ObjectProperty;
    rdfs:domain :s2DG9A6AUB1UpDEU;
    rdfs:range :MWE29A6AUB1UpDlL;
    rdfs:label \\"short format\\".
:nergVnaGAqAeDiSp rdf:type owl:ObjectProperty;
    rdfs:domain :rXdgVnaGAqAeDiSQ;
    rdfs:range :GyZ0zHaGAqAe8CuO.
:GgdUVnaGAqAeDitX rdf:type owl:ObjectProperty;
    rdfs:domain :jlAkVnaGAqAeDikV;
    rdfs:range :t4kUVnaGAqAeDiq5.
:EwiS43aAUBAyscYZ rdf:type owl:ObjectProperty;
    rdfs:domain :hcki43aAUBAyscBo;
    rdfs:range :oG0S43aAUBAyscXe.
[ rdf:type owl:AllDisjointClasses ] owl:members (:Qcjr1HaGAqAe8Bj4 :OL2n1HaGAqAe8BqQ :J9Eb1HaGAqAe8Blh :h6rr1HaGAqAe8Bkn :aeMb1HaGAqAe8Bl0 :PzJH1HaGAqAe8Bo6 :QZ.71HaGAqAe8BnP :XtIb1HaGAqAe8BlP).
:VvxaFHaGAqAe8BAf rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
[ rdf:type owl:AllDisjointClasses ] owl:members (:RxdD1HaGAqAe8Be6 :IJML1HaGAqAe8Bhq :Edij1HaGAqAe8Bfp).
:haqP1HaGAqAe8Bt7 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Household\\".
:QFOaFHaGAqAe8A_X owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:RxdD1HaGAqAe8Be6 :IJML1HaGAqAe8Bhq :Edij1HaGAqAe8Bfp)
].
:haqP1HaGAqAe8Bt7 rdfs:subClassOf gufo:Collection;
    rdf:type gufo:Kind.
[ rdf:type owl:AllDisjointClasses ] owl:members (:ztXa03aFYFAUAtTn :prHa03aFYFAUAtTD :rdna03aFYFAUAtTV).
:vcU_1HaGAqAe8Bzz rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Household Member\\".
:5qfNiXaD.AAAARX9 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:ztXa03aFYFAUAtTn :prHa03aFYFAUAtTD :rdna03aFYFAUAtTV)
].
:vcU_1HaGAqAe8Bzz rdfs:subClassOf :QFOaFHaGAqAe8A_X.
[ rdf:type owl:AllDisjointClasses ] owl:members (:KgBQ03aFYFAUAkBD :jzZQ03aFYFAUAkB9 :2fOQ03aFYFAUAkAr :d3hQ03aFYFAUAkBR).
:vcU_1HaGAqAe8Bzz rdf:type gufo:Role.
:5qfNiXaD.AAAARX9 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:KgBQ03aFYFAUAkBD :jzZQ03aFYFAUAkB9 :2fOQ03aFYFAUAkAr :d3hQ03aFYFAUAkBR)
].
:QFOaFHaGAqAe8A_X rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Person\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:BRMyq3aFYEGUExwV :g_eSq3aFYEGUExvJ :mU.yq3aFYEGUExxO).
:QFOaFHaGAqAe8A_X rdfs:subClassOf :VvxaFHaGAqAe8BAf;
    owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:BRMyq3aFYEGUExwV :g_eSq3aFYEGUExvJ :mU.yq3aFYEGUExxO)
];
    rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
[ rdf:type owl:AllDisjointClasses ] owl:members (:mkDcq3aFYEGUExq. :3sNy_vaFYFAUAi2Q).
[ rdf:type owl:AllDisjointClasses ] owl:members (:GyZ0zHaGAqAe8CuO :31ekZnaGAqAeDg.4 :tp7kNHaGAqAe8B_i :ZzJ3lnaGAqAeDh8k :jlAkVnaGAqAeDikV :qY0g1naGAqAeDjao :Oaq21naGAqAeDkC0 :vcOsDnaGAqAeDkPr :kxtsDnaGAqAeDkQY :.s56DnaGAqAeDkZi :6c.piXaD.AAAAQ8z :8xNw43aAUBAysYls :o0TY43aAUBAysY7G :F9Kc_vaFYFAUAh5I :CzCdUfaFYEGUHGn9 :pZHbpnaGAqAe8DEo :D51aFHaGAqAe8BBd :1so2FHaGAqAe8BBx :8XCKr3aFYEGUExzu :hcki43aAUBAyscBo :tWtq4_aFYEGQWxkJ :W06a4_aFYEGQWxre :uO0Q2faFYEGQT6aq :5qfNiXaD.AAAARX9 :KjzjiXaD.AAAARkQ :aKJs03aFYFAUAnVm).
:Edij1HaGAqAe8Bfp rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Woman\\".
:1so2FHaGAqAe8BBx owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:mkDcq3aFYEGUExq. :3sNy_vaFYFAUAi2Q)
].
:Edij1HaGAqAe8Bfp rdfs:subClassOf :QFOaFHaGAqAe8A_X.
[ rdf:type owl:AllDisjointClasses ] owl:members (:Kvsa_vaFYFAUAi9l :jGsa_vaFYFAUAi9Z :UFMa_vaFYFAUAi9H :nopp_vaFYFAUAjaU).
:Edij1HaGAqAe8Bfp rdf:type gufo:Role.
:mkDcq3aFYEGUExq. owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:Kvsa_vaFYFAUAi9l :jGsa_vaFYFAUAi9Z :UFMa_vaFYFAUAi9H :nopp_vaFYFAUAjaU)
].
:XtIb1HaGAqAe8BlP rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Widow/Widower\\".
:AgZE2faFYEGQT610 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:F7LE2faFYEGQT62h :cwjE2faFYEGQT62S)
].
[ rdf:type owl:AllDisjointClasses ] owl:members (:dheOVnaGAqAeDi7x :WAFZVnaGAqAeDjOi :qy0XVnaGAqAeDjWY :amlZVnaGAqAeDjOu :0WXM1naGAqAeDj8s :.icsDnaGAqAeDkOv :ru_pUfaFYEGUHFbJ).
:XtIb1HaGAqAe8BlP rdfs:subClassOf :QFOaFHaGAqAe8A_X.
:vdNE2faFYEGQT61_ owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:I6FU2faFYEGQT64Z :zJJU2faFYEGQT64I)
].
:XtIb1HaGAqAe8BlP rdf:type gufo:Role.
[ rdf:type owl:AllDisjointClasses ] owl:members (:Y3Ja2faFYEGQT7Ns :hMMq2faFYEGQT7LJ).
:IJML1HaGAqAe8Bhq rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Unknown\\".
:cwjE2faFYEGQT62S owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:Y3Ja2faFYEGQT7Ns :hMMq2faFYEGQT7LJ)
].
:IJML1HaGAqAe8Bhq rdfs:subClassOf :QFOaFHaGAqAe8A_X.
[ rdf:type owl:AllDisjointClasses ] owl:members (:xBiLuPaAUAACnkcA :jvnXuPaAUAACnkcz).
[ rdf:type owl:AllDisjointClasses ] owl:members (:OAOUzHaGAqAe8Co8 :s2DG9A6AUB1UpDEU :rtZAq3aFYEGUExSq :VzzAq3aFYEGUExTN).
:IJML1HaGAqAe8Bhq rdf:type gufo:Role.
:KjzjiXaD.AAAARkQ owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:xBiLuPaAUAACnkcA :jvnXuPaAUAACnkcz)
].
:LWsf1HaGAqAe8Bw2 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Single Person Household\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:bPlAZnaGAqAe8DZ1 :QKFAZnaGAqAe8DZp).
:LWsf1HaGAqAe8Bw2 rdfs:subClassOf :haqP1HaGAqAe8Bt7.
:pZHbpnaGAqAe8DEo owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:bPlAZnaGAqAe8DZ1 :QKFAZnaGAqAe8DZp)
].
:LWsf1HaGAqAe8Bw2 rdf:type gufo:Phase.
[ rdf:type owl:AllDisjointClasses ] owl:members (:oJvG03aFYFAUAtbr :HcpG03aFYFAUAtau).
:PzJH1HaGAqAe8Bo6 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Separated from RP\\".
:KgBQ03aFYFAUAkBD owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:oJvG03aFYFAUAtbr :HcpG03aFYFAUAtau)
].
:PzJH1HaGAqAe8Bo6 rdfs:subClassOf :QFOaFHaGAqAe8A_X.
[ rdf:type owl:AllDisjointClasses ] owl:members (:jBza_vaFYFAUAjBx :xYba_vaFYFAUAjB9).
:PzJH1HaGAqAe8Bo6 rdf:type gufo:Role.
:jzZQ03aFYFAUAkB9 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:jBza_vaFYFAUAjBx :xYba_vaFYFAUAjB9)
].
:QZ.71HaGAqAe8BnP rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Separated\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:6YQN9A6AUB1UpEmi :hWgN9A6AUB1UpEmU).
:QZ.71HaGAqAe8BnP rdfs:subClassOf :QFOaFHaGAqAe8A_X.
:QFOaFHaGAqAe8A_X owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:6YQN9A6AUB1UpEmi :hWgN9A6AUB1UpEmU)
].
:QZ.71HaGAqAe8BnP rdf:type gufo:Role.
[ rdf:type owl:AllDisjointClasses ] owl:members (:Qcjr1HaGAqAe8Bj4 :OL2n1HaGAqAe8BqQ :J9Eb1HaGAqAe8Blh :h6rr1HaGAqAe8Bkn :aeMb1HaGAqAe8Bl0 :PzJH1HaGAqAe8Bo6 :QZ.71HaGAqAe8BnP :XtIb1HaGAqAe8BlP).
:aeMb1HaGAqAe8Bl0 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Registered Partner\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:RxdD1HaGAqAe8Be6 :IJML1HaGAqAe8Bhq :Edij1HaGAqAe8Bfp).
:aeMb1HaGAqAe8Bl0 rdfs:subClassOf :QFOaFHaGAqAe8A_X.
:QFOaFHaGAqAe8A_X owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:RxdD1HaGAqAe8Be6 :IJML1HaGAqAe8Bhq :Edij1HaGAqAe8Bfp)
].
:aeMb1HaGAqAe8Bl0 rdf:type gufo:Role.
[ rdf:type owl:AllDisjointClasses ] owl:members (:BRMyq3aFYEGUExwV :g_eSq3aFYEGUExvJ :mU.yq3aFYEGUExxO).
:Pg.JFHaGAqAe8BSn rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Organization\\".
:QFOaFHaGAqAe8A_X owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:BRMyq3aFYEGUExwV :g_eSq3aFYEGUExvJ :mU.yq3aFYEGUExxO)
].
:Pg.JFHaGAqAe8BSn rdfs:subClassOf :VvxaFHaGAqAe8BAf.
[ rdf:type owl:AllDisjointClasses ] owl:members (:6YQN9A6AUB1UpEmi :hWgN9A6AUB1UpEmU).
:Pg.JFHaGAqAe8BSn rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:QFOaFHaGAqAe8A_X owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:6YQN9A6AUB1UpEmi :hWgN9A6AUB1UpEmU)
].
:E9Rf1HaGAqAe8ByE rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Multi-person Household\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:bPlAZnaGAqAe8DZ1 :QKFAZnaGAqAe8DZp).
:E9Rf1HaGAqAe8ByE rdfs:subClassOf :haqP1HaGAqAe8Bt7.
:pZHbpnaGAqAe8DEo owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:bPlAZnaGAqAe8DZ1 :QKFAZnaGAqAe8DZp)
].
:E9Rf1HaGAqAe8ByE rdf:type gufo:Phase.
[ rdf:type owl:AllDisjointClasses ] owl:members (:mkDcq3aFYEGUExq. :3sNy_vaFYFAUAi2Q).
:h6rr1HaGAqAe8Bkn rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Spouse\\".
:1so2FHaGAqAe8BBx owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:mkDcq3aFYEGUExq. :3sNy_vaFYFAUAi2Q)
].
:h6rr1HaGAqAe8Bkn rdfs:subClassOf :QFOaFHaGAqAe8A_X.
[ rdf:type owl:AllDisjointClasses ] owl:members (:Kvsa_vaFYFAUAi9l :jGsa_vaFYFAUAi9Z :UFMa_vaFYFAUAi9H :nopp_vaFYFAUAjaU).
:h6rr1HaGAqAe8Bkn rdf:type gufo:Role.
:mkDcq3aFYEGUExq. owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:Kvsa_vaFYFAUAi9l :jGsa_vaFYFAUAi9Z :UFMa_vaFYFAUAi9H :nopp_vaFYFAUAjaU)
].
:RxdD1HaGAqAe8Be6 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Man\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:ztXa03aFYFAUAtTn :prHa03aFYFAUAtTD :rdna03aFYFAUAtTV).
:RxdD1HaGAqAe8Be6 rdfs:subClassOf :QFOaFHaGAqAe8A_X.
:5qfNiXaD.AAAARX9 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:ztXa03aFYFAUAtTn :prHa03aFYFAUAtTD :rdna03aFYFAUAtTV)
].
:RxdD1HaGAqAe8Be6 rdf:type gufo:Role.
[ rdf:type owl:AllDisjointClasses ] owl:members (:KgBQ03aFYFAUAkBD :jzZQ03aFYFAUAkB9 :2fOQ03aFYFAUAkAr :d3hQ03aFYFAUAkBR).
:OL2n1HaGAqAe8BqQ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Divorced from RP\\".
:5qfNiXaD.AAAARX9 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:KgBQ03aFYFAUAkBD :jzZQ03aFYFAUAkB9 :2fOQ03aFYFAUAkAr :d3hQ03aFYFAUAkBR)
].
:OL2n1HaGAqAe8BqQ rdfs:subClassOf :QFOaFHaGAqAe8A_X.
[ rdf:type owl:AllDisjointClasses ] owl:members (:oJvG03aFYFAUAtbr :HcpG03aFYFAUAtau).
:OL2n1HaGAqAe8BqQ rdf:type gufo:Role.
:KgBQ03aFYFAUAkBD owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:oJvG03aFYFAUAtbr :HcpG03aFYFAUAtau)
].
:J9Eb1HaGAqAe8Blh rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Divorced\\".
[ rdf:type owl:AllDisjointClasses ] owl:members (:jBza_vaFYFAUAjBx :xYba_vaFYFAUAjB9).
:J9Eb1HaGAqAe8Blh rdfs:subClassOf :QFOaFHaGAqAe8A_X.
:jzZQ03aFYFAUAkB9 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:jBza_vaFYFAUAjBx :xYba_vaFYFAUAjB9)
].
:J9Eb1HaGAqAe8Blh rdf:type gufo:Role.
[ rdf:type owl:AllDisjointClasses ] owl:members (:xBiLuPaAUAACnkcA :jvnXuPaAUAACnkcz).
:OAOUzHaGAqAe8Co8 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Contact Info\\".
:KjzjiXaD.AAAARkQ owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:xBiLuPaAUAACnkcA :jvnXuPaAUAACnkcz)
].
:OAOUzHaGAqAe8Co8 rdfs:subClassOf gufo:Quality;
    rdf:type gufo:Kind.
:AgZE2faFYEGQT610 owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:F7LE2faFYEGQT62h :cwjE2faFYEGQT62S)
].
:GyZ0zHaGAqAe8CuO rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Stay\\".
:vdNE2faFYEGQT61_ owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:I6FU2faFYEGQT64Z :zJJU2faFYEGQT64I)
].
:GyZ0zHaGAqAe8CuO rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
[ rdf:type owl:AllDisjointClasses ] owl:members (:Y3Ja2faFYEGQT7Ns :hMMq2faFYEGQT7LJ).
:1Le_1HaGAqAe8B1c rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Resident in Healthcare Institution\\".
:cwjE2faFYEGQT62S owl:equivalentClass [
  rdf:type owl:Class;
  owl:unionOf (:Y3Ja2faFYEGQT7Ns :hMMq2faFYEGQT7LJ)
].
:1Le_1HaGAqAe8B1c rdfs:subClassOf :KqqJFHaGAqAe8BR_;
    rdf:type gufo:Role.
:31ekZnaGAqAeDg.4 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Court Decision\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:tp7kNHaGAqAe8B_i rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Social Relationship\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:ZzJ3lnaGAqAeDh8k rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Marriage\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:90pflnaGAqAeDiHe rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Legal Parent\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:Qcjr1HaGAqAe8Bj4 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Single\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:1l.ANHaGAqAe8B4A rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"General Practitioner\\";
    rdfs:subClassOf :ZstQ1naGAqAeDjlZ;
    rdf:type gufo:Role.
:jlAkVnaGAqAeDikV rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"GP Registration\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:dheOVnaGAqAeDi7x rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Language Capability\\";
    rdfs:subClassOf gufo:ExtrinsicMode;
    rdf:type gufo:Kind.
:rNNOVnaGAqAeDi9t rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Language\\";
    rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:Q5BQ1naGAqAeDjka rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Professional\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:PfrZFHaGAqAe8BU. rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"CIZ\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:SubKind.
:gbaJFHaGAqAe8BSL rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Office\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:SubKind.
:ZstQ1naGAqAeDjlZ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Medical Doctor\\";
    rdfs:subClassOf :C1w98faGAqACDiyu, :4pGxyXaFYFAUAgx_;
    rdf:type gufo:Role.
:qY0g1naGAqAeDjao rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Diagnosis\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:WAFZVnaGAqAeDjOi rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Disease\\";
    rdfs:subClassOf :aHpZVnaGAqAeDjOM;
    rdf:type gufo:Kind.
:qy0XVnaGAqAeDjWY rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Disability\\";
    rdfs:subClassOf :aHpZVnaGAqAeDjOM;
    rdf:type gufo:Kind.
:amlZVnaGAqAeDjOu rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Disorder\\";
    rdfs:subClassOf :aHpZVnaGAqAeDjOM;
    rdf:type gufo:Kind.
:aHpZVnaGAqAeDjOM rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Medical Condition\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
:0WXM1naGAqAeDj8s rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Prognosis\\";
    rdf:type gufo:Kind.
:J3_W1naGAqAeDkBF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Disorder Question\\";
    rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:Oaq21naGAqAeDkC0 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Disorder Question Assessment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:.icsDnaGAqAeDkOv rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Restriction\\";
    rdfs:subClassOf :aHpZVnaGAqAeDjOM;
    rdf:type gufo:Kind.
:vcOsDnaGAqAeDkPr rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Restriction Assessment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:kxtsDnaGAqAeDkQY rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Disorder Assessment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:.s56DnaGAqAeDkZi rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Restriction Question Assessment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:ZlkGDnaGAqAeDkas rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Restriction Question\\";
    rdfs:subClassOf gufo:FunctionalComplex;
    rdf:type gufo:Kind.
:ioSOiXaD.AAAAQrr rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Institute (Zorginstituut Nederland)\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:SubKind.
:ysg.iXaD.AAAAQ05 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Municipality (Gemeente)\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:SubKind.
:6c.piXaD.AAAAQ8z rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Service Agreement\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:4VC5iXaD.AAAARBd rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"SVB\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:SubKind.
:ZPy5iXaD.AAAARBt rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"CAK\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:SubKind.
:VLaUyXaD.AAAARuF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Resident of The Netherlands\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:Moq0yXaD.AAAARxJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Dutch Citizen\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:HCl0yXaD.AAAARyY rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Non-Resident\\";
    rdfs:subClassOf :Moq0yXaD.AAAARxJ;
    rdf:type gufo:Role.
:IS3MyXaD.AAAAR10 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"BSN Holder\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:4pGxyXaFYFAUAgx_ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Medical Professional\\";
    rdf:type gufo:Role.
:8xNw43aAUBAysYls rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Civil Registration\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:XAMY43aAUBAysY5T rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Legal Representative\\";
    rdfs:subClassOf :VvxaFHaGAqAe8BAf, gufo:Endurant;
    rdf:type gufo:RoleMixin.
:o0TY43aAUBAysY7G rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Legal Representation\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:g_eSq3aFYEGUExvJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Living Person\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Phase.
:BRMyq3aFYEGUExwV rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Deceased Person\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Phase.
:mU.yq3aFYEGUExxO rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Unborn\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Phase.
:YmaWr3aFYEGUEyAD rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Closed\\";
    rdfs:subClassOf :8XCKr3aFYEGUExzu;
    rdf:type gufo:Phase.
:zrCs_vaFYFAUAhzW rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Contact\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:F9Kc_vaFYFAUAh5I rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Contact Assigment\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:FgM8_vaFYFAUAh64 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Eligible Healthcare Client\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:ru_pUfaFYEGUHFbJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Spatial Region\\";
    rdf:type gufo:Kind.
:CJxFUfaFYEGUHFkc rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Inhabitant\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:CzCdUfaFYEGUHGn9 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Regional  Allocation Based on Inhabitantship\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:C1w98faGAqACDiyu rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"BIG Registred Healthcare Professional\\";
    rdfs:subClassOf :Q5BQ1naGAqAeDjka;
    rdf:type gufo:Role.
:aAym_vaFYFAUAjKF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Death\\";
    rdfs:subClassOf gufo:Event.
:s2DG9A6AUB1UpDEU rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Name\\";
    rdfs:subClassOf gufo:Quality;
    rdf:type gufo:Kind.
:QuXR9A6AUB1UpETp rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\" Adult Living Alone\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:zNDZ9A6AUB1UpEdJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\" Child Living with Parents\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:YjJ59A6AUB1UpEek rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\" Adult Living with Partner\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:o1gF9A6AUB1UpEgK rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\" Adult Living with Partner and Children\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:MQkF9A6AUB1UpEgc rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\" Adult Living with Children\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:zG6F9A6AUB1UpEh8 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\" Adult Living in Adult Household\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:hWgN9A6AUB1UpEmU rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Child\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Phase.
:6YQN9A6AUB1UpEmi rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Adult\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Phase.
:gOSY03aFYFAUAlkF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Long Term Healthcare Provider\\";
    rdfs:subClassOf :C5QMzHaGAqAe8Cwk;
    rdf:type gufo:Role.
:bPlAZnaGAqAe8DZ1 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Negative Decision\\";
    rdfs:subClassOf :pZHbpnaGAqAe8DEo;
    rdf:type gufo:SubKind.
:QKFAZnaGAqAe8DZp rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Positive Decision\\";
    rdfs:subClassOf :pZHbpnaGAqAe8DEo;
    rdf:type gufo:SubKind.
:qk33pnaGAqAe8DLl rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Request Reviewer\\";
    rdfs:subClassOf :PfrZFHaGAqAe8BU.;
    rdf:type gufo:Role.
:pZHbpnaGAqAe8DEo rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Request Decision\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:tURRFHaGAqAe8BLb rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Request Beneficiary\\";
    rdfs:subClassOf :tSM0yXaD.AAAARwK;
    rdf:type gufo:Role.
:D51aFHaGAqAe8BBd rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Request\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:SM4RFHaGAqAe8BJD rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Request Author\\";
    rdfs:subClassOf :QFOaFHaGAqAe8A_X;
    rdf:type gufo:Role.
:mkDcq3aFYEGUExq. rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Inactive LTC Indication\\";
    rdfs:subClassOf :1so2FHaGAqAe8BBx;
    rdf:type gufo:Phase.
:UIUczHaGAqAe8C4E rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Experiment\\";
    rdfs:subClassOf :1so2FHaGAqAe8BBx;
    rdf:type gufo:SubKind.
:cFQczHaGAqAe8C26 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"CIZ/BJZ Indication\\";
    rdfs:subClassOf :1so2FHaGAqAe8BBx;
    rdf:type gufo:SubKind.
:Wm_szHaGAqAe8C2o rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"BJZ Indication\\";
    rdfs:subClassOf :1so2FHaGAqAe8BBx;
    rdf:type gufo:SubKind.
:mBbszHaGAqAe8C2B rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"CIZ Indication\\";
    rdfs:subClassOf :1so2FHaGAqAe8BBx;
    rdf:type gufo:SubKind.
:jVSQzHaGAqAe8CBF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Indication Contact\\";
    rdfs:subClassOf :zrCs_vaFYFAUAhzW;
    rdf:type gufo:Role.
:ppMS_vaFYFAUAikI rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Contact Assignment\\";
    rdfs:subClassOf :F9Kc_vaFYFAUAh5I;
    rdf:type gufo:SubKind.
:3sNy_vaFYFAUAi2Q rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Active LTC Indication\\";
    rdfs:subClassOf :1so2FHaGAqAe8BBx;
    rdf:type gufo:Phase.
:UFMa_vaFYFAUAi9H rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Inactive by Replacement\\";
    rdfs:subClassOf :mkDcq3aFYEGUExq.;
    rdf:type gufo:Phase.
:jGsa_vaFYFAUAi9Z rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Inactive by Death\\";
    rdfs:subClassOf :mkDcq3aFYEGUExq.;
    rdf:type gufo:Phase.
:Kvsa_vaFYFAUAi9l rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Inactive by Fulfillment\\";
    rdfs:subClassOf :mkDcq3aFYEGUExq.;
    rdf:type gufo:Phase.
:nopp_vaFYFAUAjaU rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Pending Indication\\";
    rdfs:subClassOf :mkDcq3aFYEGUExq.;
    rdf:type gufo:Phase.
:1so2FHaGAqAe8BBx rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Indication\\";
    rdfs:subClassOf :f4Sg1naGAqAeDja_, gufo:Relator;
    rdf:type gufo:Kind.
:rtZAq3aFYEGUExSq rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Indication Budget\\";
    rdfs:subClassOf :Pw6ii3aFYEGUEy29, gufo:Quality;
    rdf:type gufo:Kind.
:VzzAq3aFYEGUExTN rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Allocation Budget\\";
    rdfs:subClassOf :Pw6ii3aFYEGUEy29, gufo:Quality;
    rdf:type gufo:Kind.
:Pw6ii3aFYEGUEy29 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Monetary Budget\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
:oJvG03aFYFAUAtbr rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Direct Start Allocation\\";
    rdfs:subClassOf :KgBQ03aFYFAUAkBD;
    rdf:type gufo:Phase.
:HcpG03aFYFAUAtau rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Pending Allocation\\";
    rdfs:subClassOf :KgBQ03aFYFAUAkBD;
    rdf:type gufo:Phase.
:Yo6G03aFYFAUAtZo rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Preferred LTH Provider\\";
    rdfs:subClassOf :gOSY03aFYFAUAlkF;
    rdf:type gufo:Role.
:ztXa03aFYFAUAtTn rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Administrative LTC Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:SubKind.
:rdna03aFYFAUAtTV rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Transitional LTC Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:SubKind.
:prHa03aFYFAUAtTD rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Regular LTC Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:SubKind.
:6URS03aFYFAUAqvB rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Allocated LTH Client\\";
    rdfs:subClassOf :KqqJFHaGAqAe8BR_;
    rdf:type gufo:Role.
:jzZQ03aFYFAUAkB9 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Declined Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:Phase.
:d3hQ03aFYFAUAkBR rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Revoked Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:Phase.
:KgBQ03aFYFAUAkBD rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Accepted Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:Phase.
:2fOQ03aFYFAUAkAr rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Requested Allocation\\";
    rdfs:subClassOf :5qfNiXaD.AAAARX9;
    rdf:type gufo:Phase.
:C5QMzHaGAqAe8Cwk rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Provider\\";
    rdfs:subClassOf :Pg.JFHaGAqAe8BSn;
    rdf:type gufo:Role.
:jBza_vaFYFAUAjBx rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Declined by Client\\";
    rdfs:subClassOf :jzZQ03aFYFAUAkB9;
    rdf:type gufo:Phase.
:xYba_vaFYFAUAjB9 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Declined by Provider\\";
    rdfs:subClassOf :jzZQ03aFYFAUAkB9;
    rdf:type gufo:Phase.
:jvnXuPaAUAACnkcz rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Care at Healthcare Organisation Agreement\\";
    rdfs:subClassOf :KjzjiXaD.AAAARkQ;
    rdf:type gufo:SubKind.
:xBiLuPaAUAACnkcA rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Care at Home Agreement\\";
    rdfs:subClassOf :KjzjiXaD.AAAARkQ;
    rdf:type gufo:SubKind.
:NK8LuPaAUAACnkbx rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Stay\\";
    rdfs:subClassOf gufo:Event.
:UxjZsPaAUAACnkHy rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Room key provided\\";
    rdfs:subClassOf gufo:Event.
:bseLQ_aFYEGUXyzA rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Stay Agreement\\";
    rdfs:subClassOf :jvnXuPaAUAACnkcz;
    rdf:type gufo:SubKind.
:eicrQ_aFYEGUXy45 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Dagbesteding\\";
    rdfs:subClassOf :jvnXuPaAUAACnkcz;
    rdf:type gufo:SubKind.
:3kN0r3aFYEGUExxc rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Office Client Dossier\\";
    rdfs:subClassOf :8XCKr3aFYEGUExzu;
    rdf:type gufo:SubKind.
:8XCKr3aFYEGUExzu rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Dossier\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:oBjeePaAUAACnl_h rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Provider Client Dossier\\";
    rdfs:subClassOf :8XCKr3aFYEGUExzu;
    rdf:type gufo:SubKind.
:f4Sg1naGAqAeDja_ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Right\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
:Harg2faFYEGQT6aD rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Preferred Healthcare Provider\\";
    rdfs:subClassOf :C5QMzHaGAqAe8Cwk;
    rdf:type gufo:Role.
:5dZI2faFYEGQT6ry rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Preferred Care Location Type\\";
    rdfs:subClassOf :AgZE2faFYEGQT610, gufo:Endurant;
    rdf:type gufo:Category.
:1O7w2faFYEGQT6oD rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Preferred Financing Type\\";
    rdfs:subClassOf :vdNE2faFYEGQT61_, gufo:Endurant;
    rdf:type gufo:Category.
:cwjE2faFYEGQT62S rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Care at Home\\";
    rdfs:subClassOf :AgZE2faFYEGQT610, :XXne.faAUB1IcX10, gufo:Endurant;
    rdf:type gufo:RoleMixin.
:Y3Ja2faFYEGQT7Ns rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Full Care (VPT)\\";
    rdfs:subClassOf :cwjE2faFYEGQT62S, gufo:Endurant;
    rdf:type gufo:RoleMixin.
:hMMq2faFYEGQT7LJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Modular Care (MPT)\\";
    rdfs:subClassOf :cwjE2faFYEGQT62S, gufo:Endurant;
    rdf:type gufo:RoleMixin.
:F7LE2faFYEGQT62h rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Stay at Healthcare Provider\\";
    rdfs:subClassOf :AgZE2faFYEGQT610, :XXne.faAUB1IcX10, gufo:Endurant;
    rdf:type gufo:RoleMixin.
:XXne.faAUB1IcX10 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Care Location\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:RoleMixin.
:tSM0yXaD.AAAARwK rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Eligible LTH Client\\";
    rdfs:subClassOf :IS3MyXaD.AAAAR10, :FgM8_vaFYFAUAh64;
    rdf:type gufo:Role.
:hcki43aAUBAyscBo rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Eligibility Declaration\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:KqqJFHaGAqAe8BR_ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTH Client\\";
    rdfs:subClassOf :tSM0yXaD.AAAARwK;
    rdf:type gufo:Role.
:tWtq4_aFYEGQWxkJ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Allocated Healthcare Service Package\\";
    rdfs:subClassOf :rj95w_aFYEGUX0iF, gufo:Relator;
    rdf:type gufo:Kind.
:W06a4_aFYEGQWxre rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Delivered Healthcare Service Package\\";
    rdfs:subClassOf :rj95w_aFYEGUX0iF, gufo:Relator;
    rdf:type gufo:Kind.
:uO0Q2faFYEGQT6aq rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Client Preference\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:5qfNiXaD.AAAARX9 rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Allocation\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:KjzjiXaD.AAAARkQ rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"LTC Service Agreement\\";
    rdfs:subClassOf gufo:Relator;
    rdf:type gufo:Kind.
:aKJs03aFYFAUAnVm rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Indicated Healthcare Service Package\\";
    rdfs:subClassOf :rj95w_aFYEGUX0iF, gufo:Relator;
    rdf:type gufo:Kind.
:rj95w_aFYEGUX0iF rdf:type owl:Class, owl:NamedIndividual;
    rdfs:label \\"Healthcare Service Package\\";
    rdfs:subClassOf gufo:Endurant;
    rdf:type gufo:Category.
"
`;
